refactore the entire project to update admin to teller

--- a/backend/src/Api/appsettings.json
+++ b/backend/src/Api/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Port=5432;Database=miniCoreBankingDB;Username=smilex;Password=smilex"
+    "DefaultConnection": "Host=ep-still-shape-a161gymp.ap-southeast-1.aws.neon.tech;Port=5432;Database=MiniCoreBankingDB;Username=neondb_owner;Password=npg_y7GHNetXbEs4;SSL Mode=Require;Channel Binding=Require; Trust Server Certificate=true;"
   },
   "Jwt": {
     "Key": "this_is_a_very_secure_key_123456",
